--- a/Level 015/HomeWork/Index.html
+++ b/Level 015/HomeWork/Index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="assets/image.png">
-    <title>documents</title>
-</head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>document</title>
 <body>
     <h1>football</h1>
     <hr>
